fixed spacing

--- a/src/Banner/Banner.css
+++ b/src/Banner/Banner.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  padding: 10px !important;
+  padding: 1px !important;
   background-color: #6c757d !important;
   background-position: bottom;
   height: 55vw;
@@ -7,17 +7,17 @@
   border-top: none;
   max-height: 475px;
   max-width: 820px;
-  min-width: 490px;
+  min-width: 350px;
   margin: auto;
 }
 
 .cover {
-  height: 50vw;
+  height: 48vw;
   background: no-repeat;
   background-size: contain;
   max-width: 750px;
   max-height: 400px;
-  margin: 0 50px;
+  margin: 0;
 }
 
 h2 {
@@ -30,7 +30,7 @@ h2 {
 .mission {
   color: red;
   text-shadow: 3px 2px black;
-  max-width: 65%;
+  max-width: 70%;
   margin: 3% 0 0 3%;
   position: relative;
   float: left;
@@ -41,18 +41,62 @@ h2 {
 }
 
 
-@media screen and (min-width: 520px) {
+@media screen and (min-width: 400px) {
+  .jumbotron {
+    padding: 10px !important;
+    background-color: #6c757d !important;
+    background-position: bottom;
+    height: 55vw;
+    border: 5px solid red;
+    border-top: none;
+    max-height: 475px;
+    max-width: 820px;
+    min-width: 490px;
+    margin: auto;
+  }
+
+  .cover {
+    /* height: 50vw; */
+    background: no-repeat;
+    background-size: contain;
+    max-width: 750px;
+    max-height: 400px;
+    margin: 0 50px;
+  }
+
+  h2 {
+    color: red;
+    text-shadow: 3px 2px black;
+    max-width: 70%;
+    margin: 20px 0 0 20px;
+  }
+
   .mission {
     color: red;
     text-shadow: 3px 2px black;
     max-width: 65%;
-    margin: 20px 0 0 20px;
+    margin: 3% 0 0 3%;
     position: relative;
     float: left;
     top: 30%;
     left: 35%;
     transform: translate(-50%, -50%);
-    font-size: 1.5em;
+    font-size: 1em;
+  }
+
+  @media screen and (min-width: 520px) {
+    .mission {
+      color: red;
+      text-shadow: 3px 2px black;
+      max-width: 65%;
+      margin: 20px 0 0 20px;
+      position: relative;
+      float: left;
+      top: 30%;
+      left: 35%;
+      transform: translate(-50%, -50%);
+      font-size: 1.5em;
+    }
   }
 }
 
@@ -93,10 +137,19 @@ h2 {
     height: 55vw;
     border: 5px solid red;
     border-top: none;
-    max-height: 475px;
+    max-height: 400px;
     max-width: 820px;
     min-width: 675px;
     margin: auto;
+  }
+
+  .cover {
+    /* height: 40vw; */
+    background: no-repeat;
+    background-size: contain;
+    max-width: 750px;
+    max-height: 315px;
+    margin: 0 50px;
   }
 
 }
