--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -1,3 +1,7 @@
+h4 {
+  font-size: 4vw !important;
+}
+
 @media screen and (min-width: 1500px) {
   .contact {
     height: 300px
