--- a/src/HomeField/HomeField.css
+++ b/src/HomeField/HomeField.css
@@ -2,3 +2,49 @@ a{
   color: red !important;
   text-shadow: 3px 3px black;
 }
+
+/* @media screen and (max-width: 400px) { */
+  .card-body {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 0rem !important;
+  }
+
+  h4 {
+    font-size: 4vw !important;
+  }
+
+  h3 {
+    font-size: 4vw !important;
+  }
+/* } */
+
+@media screen and (min-width: 400px) {
+  .card-body {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 0rem !important;
+  }
+
+  h4 {
+    font-size: 3vw !important;
+  }
+
+  h3 {
+    font-size: 3vw !important;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  h4 {
+    font-size: 1.5vw !important;
+  }
+
+  h3 {
+    font-size: 1.5vw !important;
+  }
+
+  h1 {
+    font-size: 1.5vw !important;
+  }
+}
