--- a/src/Navigation/Navigation.css
+++ b/src/Navigation/Navigation.css
@@ -1,7 +1,7 @@
 h1 {
  color: red !important;
  text-shadow: 3px 3px black;
- font-size: 4vw !important;
+ font-size: 4.5vw !important;
 
 }
 
